# litescript

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  readme.rst  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yaml
.github/workflows/: docs.yaml  lint.yaml  release.yaml  safety_check.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  readme.rst  requirements.txt  usage.rst
src/litescript/: __init__.py  data_science.py  litescript.py  logging_module.py  scripting.py  vis_utils.py
tests/: __init__.py  test_datascience.py  test_exports.py  test_litescript.py  test_logging.py  test_vis.py
